# rust-nation-2025-starter

./: Cargo.toml  README.md  flake.nix
src/: main.rs
