[package]
authors = ["J S"]
edition = "2021"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "rust-nation-2025-starter"
description = "Rust Nation 2025: Drone Challenge Starter Repo"
version = "0.1.0"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
eyre = "0.6.12"

num = "0.4.0"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"
